# fib-interp-2

./: README.md  main.py  pyproject.toml
models/: model_0.pt  sum_model.pt
notebook/: main.ipynb  mean_ablation.ipynb
src/: utils.py
src/fib_interp_2/: utils.py
