[project]
name = "fib-interp-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "plotly>=6.7.0",
    "plotly-express>=0.4.1",
    "plotly-utils>=0.0.3",
    "torch>=2.12.0",
    "transformer-lens>=3.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
